Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -153,6 +153,10 @@
 </br>
 </br>
 
+- 상위 레벨에 어디에 들어가 있는지 파악 가능
+<img width="910" height="84" alt="image" src="https://github.com/user-attachments/assets/353a3ba8-a51a-40a9-8d4a-e4b283b4989a" />
+</br>
+</br>
 
 ### ABAP 프로그램 유형
 - SAP에서 자주 사용하는 ABAP 프로그램 유형(Type)과 특징 정리
