Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -154,7 +154,12 @@
 </br>
 
 - 상위 레벨에 어디에 들어가 있는지 파악 가능
-<img width="910" height="84" alt="image" src="https://github.com/user-attachments/assets/353a3ba8-a51a-40a9-8d4a-e4b283b4989a" />
+<img width="506" height="47" alt="image" src="https://github.com/user-attachments/assets/3e423dce-8130-46d1-8f1a-a9f0e6a42f96" />
+</br>
+</br>
+
+- 순서대로 코드 문법 체크 => 활성화(activate) => 디버그
+<img width="508" height="43" alt="image" src="https://github.com/user-attachments/assets/552be000-918d-4fbd-a0cd-735d7deef1bd" />
 </br>
 </br>
 
