Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -188,6 +188,7 @@
 **1) PARAMETERS**
 - 사용자로부터 입력값을 받기 위한 키워드
 - 타입을 안 적으면 기본 타입은 C(문자) 길이 1
+- 옵션들은 대부분 순서에 상관없이 쓸 수 있음
 ```abap
 PARAMETERS <변수명> TYPE <데이터타입>.
 ```
