--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -1,6 +1,15 @@
 ### ABAP 타입 3종
+1) Data Element Type
+   - 하나의 값(필드 하나)을 표현하는 타입
+   - 길이/형식 같은 기본 속성을 정의함
 
+2) Structure Type
+   - 여러 필드가 모여 하나의 덩어리를 이루는 타입
+   - 하나의 레코드(행) 같은 구조
+  
+3) Table Type
+   - 동일한 구조를 여러 개 담는 “내부 테이블”을 위한 타입
+   - 여러 행을 저장하는 컬렉션 형태
 
-Data element type : 필드 하나짜리 데이터
-structure type  : 필드가 여러개 붙어있는 데이터
-table type  : 여러개의 데이터를 넣을 수 있는 테이블 타입
+ DATA와 TYPE
+ DATA는 Value값을 가질 수 잇고  type은 못가짐
