Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -1,4 +1,5 @@
 ### ABAP 타입 3종
+- `DATA`는 메모리와 값을 갖는 변수 생성, `TYPE`은 값 없이 타입만 정의
 1) Data Element Type
    - 하나의 값(필드 하나)을 표현하는 타입
    - 길이/형식 같은 기본 속성을 정의함
@@ -10,6 +11,4 @@
 3) Table Type
    - 동일한 구조를 여러 개 담는 “내부 테이블”을 위한 타입
    - 여러 행을 저장하는 컬렉션 형태
-
- DATA와 TYPE
- DATA는 Value값을 가질 수 잇고  type은 못가짐
+</br>
