Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -13,3 +13,24 @@
    - 여러 행을 저장하는 컬렉션 형태
 </br>
 </br>
+
+### 데이터 요소(Data Element) 타입으로 올 수 있는 3가지 종류
+1) Standard Data Type
+   - SAP가 제공하는 기본 데이터 타입
+   - **1-1. Complete Type**
+   - 1-2. Incomplete Type
+
+2) Local Type
+   - 특정 프로그램 내에서 정의하여 사용하는 타입
+   - 다른 프로그램에서는 사용할 수 없음
+  
+3) Global Data Type
+   - 동일한 구조를 여러 개 담는 “내부 테이블”을 위한 타입
+   - 여러 행을 저장하는 컬렉션 형태
+     
+data element 타입으로 올 수 있는 3가지 종류
+1. standard data type   : 기본 데이터타입
+   1-1. complete type   : 자릿수가 이미 지정됨
+   1-2. incomplete type   : 자릿수 지정 필요
+2. local type : 프로그램 내에서 정의하여 사용
+3. global data type   : 모든 프로그램에서 사용 (SE11)
