Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -17,7 +17,7 @@
 ### 데이터 요소(Data Element) 타입으로 올 수 있는 3가지 종류
 1) Standard Data Type
    - SAP가 제공하는 기본 데이터 타입
-   - #### 1-1. Complete Type
+   #### - 1-1. Complete Type
    - 1-2. Incomplete Type
 
 2) Local Type
