--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -18,7 +18,7 @@
 1) Standard Data Type
    - SAP가 제공하는 기본 데이터 타입
    #### 1-1. Complete Type
-   - 1-2. Incomplete Type
+   #### 1-2. Incomplete Type
 
 2) Local Type
    - 특정 프로그램 내에서 정의하여 사용하는 타입
