Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -18,13 +18,24 @@
 1) Standard Data Type
    - SAP가 제공하는 기본 데이터 타입
    #### 1-1. Complete Type
+   | Type       | 설명                                                                 |
+   |------------|----------------------------------------------------------------------|
+   | D          | 날짜(Date)                                                             |
+   | T          | 시간(Time)                                                             |
+   | I          | 4바이트 정수(Integer 4)                                               |
+   | INT8       | 8바이트 정수(Integer 8)                                               |
+   | F          | 부동 소수점(Float)                                                     |
+   | STRING     | 가변 길이 문자열(Variable-length string), 사용자가 입력하는 만큼 동적 할당됨 |
+   | XSTRING    | 가변 길이 이진(Binary) 문자열, 사용자가 입력하는 만큼 동적 할당됨      |
+   | DECFLOAT16 | 16자리 부동 소수점(decimal floating)                                  |
+   | DECFLOAT34 | 34자리 부동 소수점(decimal floating)                                  |
    #### 1-2. Incomplete Type
 
-2) Local Type
+3) Local Type
    - 특정 프로그램 내에서 정의하여 사용하는 타입
    - 다른 프로그램에서는 사용할 수 없음
   
-3) Global Data Type
+4) Global Data Type
    - 동일한 구조를 여러 개 담는 “내부 테이블”을 위한 타입
    - 여러 행을 저장하는 컬렉션 형태
      
