--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -29,7 +29,15 @@
    | XSTRING    | 가변 길이 이진(Binary) 문자열, 사용자가 입력하는 만큼 동적 할당됨      |
    | DECFLOAT16 | 16자리 부동 소수점(decimal floating)                                  |
    | DECFLOAT34 | 34자리 부동 소수점(decimal floating)                                  |
+   </br>
+   
    #### 1-2. Incomplete Type
+   | Type | 설명                                                      |
+   |------|-----------------------------------------------------------|
+   | C    | 문자(Character), 길이 지정 필요                            |
+   | N    | 숫자 문자(Numeric character), 길이 지정 필요              |
+   | X    | 16진수(Hexadecimal), 길이 지정 필요                       |
+   | P    | Packed Decimal(BCD), 소수점 위치 지정 필요                 |
 
 3) Local Type
    - 특정 프로그램 내에서 정의하여 사용하는 타입
