Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -15,7 +15,7 @@
 </br>
 
 ### 데이터 요소(Data Element) 타입으로 올 수 있는 3가지 종류
-1) Standard Data Type
+#### 1) Standard Data Type
    - SAP가 제공하는 기본 데이터 타입
    #### 1-1. Complete Type
    | Type       | 설명                                                                 |
@@ -39,11 +39,11 @@
    | X    | 16진수(Hexadecimal), 길이 지정 필요                       |
    | P    | Packed Decimal(BCD), 소수점 위치 지정 필요                 |
 
-3) Local Type
+#### 2) Local Type
    - 특정 프로그램 내에서 정의하여 사용하는 타입
    - 다른 프로그램에서는 사용할 수 없음
   
-4) Global Data Type
+#### 3) Global Data Type
    - 동일한 구조를 여러 개 담는 “내부 테이블”을 위한 타입
    - 여러 행을 저장하는 컬렉션 형태
      
