Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -195,6 +195,8 @@ PARAMETERS <변수명> TYPE <데이터타입>.
 ```abap
 PARAMETERS pa_name TYPE string.  " 문자열 입력값 받음
 PARAMETERS pa_num  TYPE I.       " 정수형 입력값 받음
+PARAMETERS pa_num  TYPE C LENGTH 4.
+PARAMETERS pa_num(4)  TYPE C.      " 위와 같은 코드
 ```
 </br>
 
