--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -37,9 +37,11 @@
       | N    | 숫자형 문자(Numeric character), 길이 지정 필요              |
       | X    | 16진수(Hexadecimal), 길이 지정 필요                       |
       | P    | 고정소수점. Packed Decimal(BCD), 소수점 위치 지정 필요                 |
-      ```abap
-      DATA lv_amount TYPE P LENGTH 5 DECIMALS 2.
-      ```
+        - P TYPE
+        - `총 자릿수 = LENGTH * 2 - 1`
+            ```abap
+            DATA lv_amount TYPE P LENGTH 5 DECIMALS 2.
+            ```
       
 #### 2) Local Type
    - 특정 프로그램 내에서 정의하여 사용하는 타입
