Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -39,6 +39,10 @@
       | P    | 고정소수점. Packed Decimal(BCD), 소수점 위치 지정 필요                 |
         - P TYPE
         - `총 자릿수 = LENGTH * 2 - 1`
+          - LENGTH : P 타입 선언 시 지정하는 바이트 수
+          - *2 → 1바이트 = 2자리 숫자를 저장
+          - -1 → 마지막 절반 바이트는 부호용
+          
             ```abap
             DATA lv_amount TYPE P LENGTH 5 DECIMALS 2.
             ```
