Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -54,12 +54,8 @@
    - 다른 프로그램에서는 사용할 수 없음
   
 #### 3) Global Data Type
-   - 동일한 구조를 여러 개 담는 “내부 테이블”을 위한 타입
-   - 여러 행을 저장하는 컬렉션 형태
+   - SE11에서 정의되어 모든 프로그램에서 사용 가능한 타입
+   - 데이터 요소, 구조, 테이블 타입 등으로 활용 가능
+
      
-data element 타입으로 올 수 있는 3가지 종류
-1. standard data type   : 기본 데이터타입
-   1-1. complete type   : 자릿수가 이미 지정됨
-   1-2. incomplete type   : 자릿수 지정 필요
-2. local type : 프로그램 내에서 정의하여 사용
-3. global data type   : 모든 프로그램에서 사용 (SE11)
+TYpes 키워드 사용 : 타입으로써 사용할 로컬 타입 정의 할 때
