Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -56,6 +56,11 @@
 #### 3) Global Data Type
    - SE11에서 정의되어 모든 프로그램에서 사용 가능한 타입
    - 데이터 요소, 구조, 테이블 타입 등으로 활용 가능
+</br>
+</br>
+
+### ABAP 기본 문법
+
 
      
 TYpes 키워드 사용 : 타입으로써 사용할 로컬 타입 정의 할 때
