Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -61,6 +61,19 @@
 
 ### ABAP 기본 문법
 
+#### TYPES
+- 로컬 타입을 정의할 때 사용하는 키워드, 실제 변수를 만드는 것이 아님
+```abap
+TYPES <타입명> TYPE <데이터타입/구조>.
+```
+```abap
+TYPES ty_employee TYPE string.         "문자열 타입 정의
+DATA lv_emp_name TYPE ty_employee.     "타입 사용 변수 선언
 
-     
-TYpes 키워드 사용 : 타입으로써 사용할 로컬 타입 정의 할 때
+TYPES: BEGIN OF ty_struct,
+         name   TYPE string,
+         age    TYPE I,
+       END OF ty_struct.
+DATA ls_emp TYPE ty_struct.            "구조 타입 변수 선언
+```
+
