Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -52,6 +52,21 @@
 #### 2) Local Type
    - 특정 프로그램 내에서 정의하여 사용하는 타입
    - 다른 프로그램에서는 사용할 수 없음
+   #### TYPES
+   - 로컬 타입을 정의할 때 사용하는 키워드, 실제 변수를 만드는 것이 아님
+   ```abap
+   TYPES <타입명> TYPE <데이터타입/구조>.
+   ```
+   ```abap
+   TYPES ty_employee TYPE string.         "문자열 타입 정의
+   DATA lv_emp_name TYPE ty_employee.     "타입 사용 변수 선언
+   
+   TYPES: BEGIN OF ty_struct,
+            name   TYPE string,
+            age    TYPE I,
+          END OF ty_struct.
+   DATA ls_emp TYPE ty_struct.            "구조 타입 변수 선언
+   ```
   
 #### 3) Global Data Type
    - SE11에서 정의되어 모든 프로그램에서 사용 가능한 타입
