--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -82,6 +82,10 @@
 TYPES <타입명> TYPE <데이터타입/구조>.
 ```
 ```abap
+TYPES tv_c_type TYPE C LENGTH 8.
+TYPES tv_n_type TYPE N LENGTH 5.
+TYPES tv_p_type TYPE P LENGTH 3 DECIMALS 2.
+
 TYPES ty_employee TYPE string.         "문자열 타입 정의
 DATA lv_emp_name TYPE ty_employee.     "타입 사용 변수 선언
 
