--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -58,19 +58,29 @@
    TYPES <타입명> TYPE <데이터타입/구조>.
    ```
    ```abap
-   TYPES ty_employee TYPE string.         "문자열 타입 정의
-   DATA lv_emp_name TYPE ty_employee.     "타입 사용 변수 선언
-   
-   TYPES: BEGIN OF ty_struct,
-            name   TYPE string,
-            age    TYPE I,
-          END OF ty_struct.
-   DATA ls_emp TYPE ty_struct.            "구조 타입 변수 선언
+   TYPES tv_c_type TYPE C LENGTH 8.
+   TYPES tv_n_type TYPE N LENGTH 5.
+   TYPES tv_p_type TYPE P LENGTH 3 DECIMALS 2.
+
+   TYPES ty_employee TYPE string.         " 문자열 타입 정의
+   DATA lv_emp_name TYPE ty_employee.     " 타입 사용 변수 선언
    ```
   
 #### 3) Global Data Type
    - SE11에서 정의되어 모든 프로그램에서 사용 가능한 타입
    - 데이터 요소, 구조, 테이블 타입 등으로 활용 가능
+
+   #### 1) Data Element Type
+   - 하나의 값(필드 하나)을 표현하는 타입
+   - 길이/형식 같은 기본 속성을 정의함
+
+   #### 2) Structure Type
+      - 여러 필드가 모여 하나의 덩어리를 이루는 타입
+      - 하나의 레코드(행) 같은 구조
+     
+   #### 3) Table Type (Internal Table)
+      - 동일한 구조를 여러 개 담는 “내부 테이블”을 위한 타입
+      - 여러 행을 저장하는 컬렉션 형태
 </br>
 </br>
 
@@ -88,11 +98,5 @@ TYPES tv_p_type TYPE P LENGTH 3 DECIMALS 2.
 
 TYPES ty_employee TYPE string.         "문자열 타입 정의
 DATA lv_emp_name TYPE ty_employee.     "타입 사용 변수 선언
-
-TYPES: BEGIN OF ty_struct,
-         name   TYPE string,
-         age    TYPE I,
-       END OF ty_struct.
-DATA ls_emp TYPE ty_struct.            "구조 타입 변수 선언
 ```
 
