--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -1,6 +1,6 @@
-`DATA`는 메모리와 값을 갖는 변수 생성, `TYPE`은 값 없이 타입만 정의
-
 ### 데이터 요소(Data Element) 타입으로 올 수 있는 3가지 종류
+- `DATA`는 메모리와 값을 갖는 변수 생성, `TYPE`은 값 없이 타입만 정의
+  
 #### 1) Standard Data Type
    - SAP가 제공하는 기본 데이터 타입
       #### 1-1) Complete Type
