--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -39,7 +39,7 @@
 #### 2) Local Type
    - 특정 프로그램 내에서 정의하여 사용하는 타입
    - 다른 프로그램에서는 사용할 수 없음
-       #### TYPES
+       #### 2-1) TYPES
        - 로컬 타입을 정의할 때 사용하는 키워드, 실제 변수를 만드는 것이 아님
         </br>
          
@@ -54,21 +54,35 @@
        TYPES ty_employee TYPE string.         " 문자열 타입 정의
        DATA lv_emp_name TYPE ty_employee.     " 타입 사용 변수 선언
        ```
+
+       #### 2-2) LIKE
+       - 기존 변수나 데이터 요소의 타입과 속성을 그대로 가져와 새로운 변수 선언
+        </br>
+         
+       ```abap
+       DATA <새변수> LIKE <기존변수|데이터요소>.
+       ```
+       ```abap
+       DATA gv_amount TYPE P LENGTH 7 DECIMALS 2.   "기존 변수 선언
+       DATA lv_amount LIKE gv_amount.                "gv_amount와 같은 타입으로 선언
+      
+       DATA lv_name LIKE gv_name.                    "기존 데이터 요소 gv_name 타입 참조
+       ```
      </br>
   
 #### 3) Global Data Type
    - SE11에서 정의되어 모든 프로그램에서 사용 가능한 타입
    - 데이터 요소, 구조, 테이블 타입 등으로 활용 가능
 
-     #### 1) Data Element Type
+     #### 3-1) Data Element Type
       - 하나의 값(필드 하나)을 표현하는 타입
       - 길이/형식 같은 기본 속성을 정의함
    
-      #### 2) Structure Type
+      #### 3-2) Structure Type
       - 여러 필드가 모여 하나의 덩어리를 이루는 타입
       - 하나의 레코드(행) 같은 구조
         
-      #### 3) Table Type (Internal Table)
+      #### 3-3) Table Type (Internal Table)
       - 동일한 구조를 여러 개 담는 “내부 테이블”을 위한 타입
       - 여러 행을 저장하는 컬렉션 형태
 
