Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -67,6 +67,19 @@
        DATA lv_amount LIKE gv_amount.               " gv_amount와 같은 타입으로 선언
        ```
      </br>
+
+       #### 2-2) VALUE
+         - 변수를 선언하면서 초기값을 지정할 때 사용
+          </br>
+           
+         ```abap
+         DATA <변수명> TYPE <데이터타입> VALUE <초기값>.
+         ```
+         ```abap
+         DATA gv_count TYPE I VALUE 10.               " 정수형 변수 초기값 10
+         DATA lv_name  TYPE string VALUE 'ABAP'.      " 문자형 변수 초기값 'ABAP'
+         ```
+       </br>
   
 #### 3) Global Data Type
    - SE11에서 정의되어 모든 프로그램에서 사용 가능한 타입
