Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -100,4 +100,24 @@
 </br>
 </br>
 
+### ABAP 변수와 타입 선언: 초기값 vs 기본값 정리
+#### 1) 초기값 (Initial Value)
+- 모든 변수에는 타입에 따라 자동으로 존재하는 값
+- 변수 값을 초기화하면 이 값으로 초기값이 변경됨
+```abap
+DATA gv_count TYPE I.   " 초기값 0 자동 존재
+DATA gv_char  TYPE C.   " 초기값 공백
+```
+</br>
+
+#### 2) 기본값 (Default Value)
+- 변수 선언 시 임의로 지정한 값
+- 초기값과 달리 개발자가 지정한 값으로 변수 시작
+```abap
+DATA gv_count TYPE I VALUE 10.  " 기본값 10
+DATA gv_name  TYPE C LENGTH 5 VALUE 'ABAP'.  " 기본값 'ABAP'
+```
+
 ### < 실습 코드 >
+- 실습 1
+- 
