Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -121,4 +121,28 @@ DATA gv_name  TYPE C LENGTH 5 VALUE 'ABAP'.  " 기본값 'ABAP'
 
 ### < 실습 코드 >
 - 실습 1
-- 
+```abap
+" 변수 선언 시
+" => gv_ 글로벌 Data obj
+" => lv_ 로컬 Data obj
+" 타입 선언 시
+" => tv_ : Type value
+" 파라미터 선언 시
+" => pv_ : 첫 글자에 Parameter 약자 P
+" 상수 선언 시
+" => gc_ : 첫 글자에 Constants 약자
+
+" 연습
+TYPES: tv_char(10) TYPE C,
+       tv_dec TYPE P LENGTH 3 DECIMALS 2.
+
+PARAMETERS: pv_data TYPE C LENGTH 3 DEFAULT 'HI'
+
+DATA: gv_dec TYPE tv_dec,
+      gv_date TYPE D,
+      gv_char2 TYPE tv_char,
+      gv_num TYPE I VALUE 20,
+      gv_carrname TYPE S_CARRNAME,
+      gv_conn TYPE S_CONN_ID.
+DATA: gv_carrname2 LIKE gv_carrname VALUE 'TEST'
+```
