Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -106,19 +106,21 @@ DATA gv_name  TYPE C LENGTH 5 VALUE 'ABAP'.  " 기본값 'ABAP'
 </br>
 </br>
 
+### ABAP 기본 문법
+#### 1) VALUE
+- 변수를 선언하면서 초기값을 지정할 때 사용
+</br>
+ 
+```abap
+DATA <변수명> TYPE <데이터타입> VALUE <초기값>.
+```
+```abap
+DATA gv_count TYPE I VALUE 10.               " 정수형 변수 초기값 10
+DATA lv_name  TYPE string VALUE 'ABAP'.      " 문자형 변수 초기값 'ABAP'
+```
+</br>
 
 
-VALUE
-         - 변수를 선언하면서 초기값을 지정할 때 사용
-          </br>
-           
-         ```abap
-         DATA <변수명> TYPE <데이터타입> VALUE <초기값>.
-         ```
-         ```abap
-         DATA gv_count TYPE I VALUE 10.               " 정수형 변수 초기값 10
-         DATA lv_name  TYPE string VALUE 'ABAP'.      " 문자형 변수 초기값 'ABAP'
-         ```
 </br>
 </br>
 
