Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -121,6 +121,16 @@ DATA lv_name  TYPE string VALUE 'ABAP'.      " 문자형 변수 초기값 'ABAP'
 </br>
 
 #### 2) CONSTANTS
+- 변하지 않는 값(상수)을 선언할 때 사용
+- 선언 후 값 변경 불가
+```abap
+CONSTANTS <상수명> TYPE <데이터타입> VALUE <값>.
+```
+```abap
+CONSTANTS: gc_str TYPE string VALUE 'OKOK',
+           gc_num TYPE I VALUE 100.
+```
+</br>
 
 </br>
 </br>
@@ -152,3 +162,8 @@ DATA: gv_dec TYPE tv_dec,
       gv_conn TYPE S_CONN_ID.
 DATA: gv_carrname2 LIKE gv_carrname VALUE 'TEST'
 ```
+</br>
+
+- 실습 2
+- ABAP 텍스트 요소 다국어 번역 설정
+- `text-001 더블클릭 → Goto → Translation → 원하는 언어 문자열 입력 → 저장`
