Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -132,6 +132,15 @@ CONSTANTS: gc_str TYPE string VALUE 'OKOK',
 ```
 </br>
 
+#### 3) WRITE
+- (필드) : 필드 길이에 맞춰 출력
+- text-001 : SE51에서 정의한 텍스트 요소, 자리 표시자(&1, &2) 사용 가능
+- `text-001 다국어 처리 방법` : `text-001 더블클릭 → Goto → Translation → 원하는 언어 문자열 입력 → 저장`
+```abap
+WRITE: 'My selected variable : '(GRE),
+       gc_num,
+       text-001.
+```
 </br>
 </br>
 
@@ -152,7 +161,7 @@ CONSTANTS: gc_str TYPE string VALUE 'OKOK',
 TYPES: tv_char(10) TYPE C,
        tv_dec TYPE P LENGTH 3 DECIMALS 2.
 
-PARAMETERS: pv_data TYPE C LENGTH 3 DEFAULT 'HI'
+PARAMETERS: pv_data TYPE C LENGTH 3 DEFAULT 'HI'.
 
 DATA: gv_dec TYPE tv_dec,
       gv_date TYPE D,
@@ -160,10 +169,10 @@ DATA: gv_dec TYPE tv_dec,
       gv_num TYPE I VALUE 20,
       gv_carrname TYPE S_CARRNAME,
       gv_conn TYPE S_CONN_ID.
-DATA: gv_carrname2 LIKE gv_carrname VALUE 'TEST'
+DATA: gv_carrname2 LIKE gv_carrname VALUE 'TEST'.
+
+CONSTANTS: gc_str TYPE string VALUE 'OKOK',
+           gc_num TYPE I VALUE 100.
 ```
 </br>
 
-- 실습 2
-- ABAP 텍스트 요소 다국어 번역 설정
-- `text-001 더블클릭 → Goto → Translation → 원하는 언어 문자열 입력 → 저장`
