Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -135,7 +135,7 @@ CONSTANTS: gc_str TYPE string VALUE 'OKOK',
 #### 3) WRITE
 - (필드) : 필드 길이에 맞춰 출력
 - text-001 : SE51에서 정의한 텍스트 요소, 자리 표시자(&1, &2) 사용 가능
-- `text-001 다국어 처리 방법` : `text-001 더블클릭 → Goto → Translation → 원하는 언어 문자열 입력 → 저장`
+- text-001 다국어 처리 방법 : `text-001 더블클릭 → Goto → Translation → 원하는 언어 문자열 입력 → 저장`
 ```abap
 WRITE: 'My selected variable : '(GRE),
        gc_num,
