Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -173,6 +173,14 @@ DATA: gv_carrname2 LIKE gv_carrname VALUE 'TEST'.
 
 CONSTANTS: gc_str TYPE string VALUE 'OKOK',
            gc_num TYPE I VALUE 100.
+
+WRITE: 'My selected variable : '(GRE),
+       gc_num,
+       text-001.
+
+" Message Class / Text symbols 를 사용하여 메세지 관리를 하는데,
+" Text symbols 에서는 변수 사용할 수 없음
+" 변수 사용하려면 Message Class를 사용하자
 ```
 </br>
 
