--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -187,6 +187,6 @@ WRITE: 'My selected variable : '(GRE),
 - 실습 2
 - GRE 더블클릭해서 Text symbols의 값 `trainee can learn ABAP programming.`로 설정 -> Translation 선택 -> 원하는 언어(EN/KO) 문자열 입력 → 저장
 ```abap
-PARAMETERS name TYPE string.
+PARAMETERS name(10) TYPE C.
 WRITE: name, 'trainee can learn ABAP programming.'(GRE).
 ```
