Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -142,6 +142,33 @@ WRITE: 'My selected variable : '(GRE),
        text-001.
 ```
 </br>
+
+#### 4) MOVE
+- 값을 다른 변수에 대입할 때 사용하는 구문(현재는 `=` 와 동일하게 동작)
+```abap
+MOVE <source> TO <target>.
+```
+```abap
+DATA gv_num1 TYPE I VALUE 10.
+DATA gv_num2 TYPE I.
+
+MOVE gv_num1 TO gv_num2.     " gv_num2 = 10
+```
+</br>
+
+#### 5) CLEAR
+- 변수 또는 내부 테이블의 값을 초기값으로 리셋할 때 사용 (타입별 초기값으로 설정됨)
+```abap
+CLEAR <변수명>.
+```
+```abap
+DATA gv_num TYPE I VALUE 10.
+DATA gv_text TYPE c LENGTH 5 VALUE 'ABAP'.
+
+CLEAR gv_num.    " 결과: 0
+CLEAR gv_text.   " 결과: '     ' (공백)
+```
+</br>
 </br>
 
 ### < 실습 코드 >
