Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -106,7 +106,7 @@ DATA gv_name  TYPE C LENGTH 5 VALUE 'ABAP'.  " 기본값 'ABAP'
 </br>
 </br>
 
-### ABAP 기본 문법
+### < ABAP 기본 문법 >
 #### 1) VALUE
 - 변수를 선언하면서 초기값을 지정할 때 사용
 </br>
