Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -178,7 +178,7 @@
 ---
 </br>
 
-### ABAP 기본 문법
+## < ABAP 기본 문법 >
 - 모든 문장은 마지막에 마침표(.)
 - 문자열은 반드시 홑따옴표 `' '` 사용
   
@@ -322,7 +322,7 @@ DATA gv_result TYPE I.    " 변수 선언
 </br>
 </br>
 
-### < 실습 코드 >
+## < 실습 코드 >
 - 실습 1
 ```abap
 REPORT ZPROGB03_0001.
