Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -175,6 +175,30 @@ CLEAR gv_text.   " 결과: '     ' (공백)
 </br>
 </br>
 
+### 연산자(Operators)
+- ABAP에서 사용되는 기본 산술 연산자
+```abap
++   : 더하기
+-   : 빼기
+*   : 곱하기
+/   : 나누기
+**  : 지수(제곱) → 2 ** 3 = 8
+DIV : 정수 나눗셈의 몫
+MOD : 나머지
+```
+```abap
+DATA a TYPE i VALUE 10.
+DATA b TYPE i VALUE 3.
+DATA r TYPE i.
+
+r = a + b.      " 13
+r = a ** b.     " 1000 (10의 3승)
+r = a DIV b.    " 3   (몫)
+r = a MOD b.    " 1   (나머지)
+```
+</br>
+</br>
+
 ---
 
 </br>
