Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -173,6 +173,20 @@ CLEAR gv_num.    " 결과: 0
 CLEAR gv_text.   " 결과: '     ' (공백)
 ```
 </br>
+
+#### 6) STRLEN
+- 문자열의 길이(문자 수)를 구할 때 사용
+```abap
+<변수> = STRLEN( <문자열> ).
+```
+```abap
+DATA gv_text TYPE string VALUE 'ABAP'.
+DATA gv_len  TYPE i.
+
+gv_len = STRLEN( gv_text ).     " 결과: 4
+```
+
+</br>
 </br>
 
 ### 연산자(Operators)
