Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -264,3 +264,23 @@ WRITE: name, 'trainee can learn ABAP programming.'(GRE).
 
 " GRE 더블클릭해서 Text symbols의 값 trainee can learn ABAP programming. 로 설정 -> Translation 선택 -> 원하는 언어(EN/KO) 문자열 입력 → 저장
 ```
+</br>
+
+- 실습 3
+```abap
+PARAMETERS: pa_num1 TYPE i,
+            pa_num2 TYPE i.
+
+DATA: gv_result TYPE i.
+
+gv_result = pa_num1 + pa_num2.    " 5 + 2 = 7
+gv_result = pa_num1 - pa_num2.    " 5 - 2 = 3
+gv_result = pa_num1 * pa_num2.    " 5 + 2 = 7
+gv_result = pa_num1 / pa_num2.    " 5 / 2 = 3 -> 정수끼리 나눗셈 후 반올림
+gv_result = pa_num1 ** pa_num2.   " 5 ** 2 = 25
+gv_result = pa_num1 DIV pa_num2.  " 5 DIV 2 = 2 -> 반올림 없음
+gv_result = pa_num1 MOD pa_num2.  " 5 MOD 2 = 1
+
+WRITE:/ gv_result.
+*Pretty printer(코드정리) 사용시 Shift + F1
+```
