Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -185,7 +185,56 @@ DATA gv_len  TYPE i.
 
 gv_len = STRLEN( gv_text ).     " 결과: 4
 ```
+</br>
 
+#### 7) IF문
+- 조건에 따라 코드 블록을 실행할 때 사용
+```abap
+IF <조건>.
+    <실행문>.
+ELSEIF <조건>.
+    <실행문>.
+ELSE.
+    <실행문>.
+ENDIF.
+```
+```abap
+DATA gv_num TYPE i VALUE 10.
+
+IF gv_num > 10.
+    WRITE '크다'.
+ELSEIF gv_num = 10.
+    WRITE '같다'.
+ELSE.
+    WRITE '작다'.
+ENDIF.
+```
+</br>
+
+#### 8) CASE문
+- 하나의 변수 값에 따라 여러 경우를 처리할 때 사용
+```abap
+CASE <변수>.
+    WHEN <값1>.
+        <실행문>.
+    WHEN <값2>.
+        <실행문>.
+    WHEN OTHERS.
+        <실행문>.
+ENDCASE.
+```
+```abap
+DATA gv_code TYPE c LENGTH 1 VALUE 'B'.
+
+CASE gv_code.
+    WHEN 'A'.
+        WRITE 'Apple'.
+    WHEN 'B'.
+        WRITE 'Banana'.
+    WHEN OTHERS.
+        WRITE 'Unknown'.
+ENDCASE.
+```
 </br>
 </br>
 
