--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -189,6 +189,10 @@ gv_len = STRLEN( gv_text ).     " 결과: 4
 
 #### 7) IF문
 - 조건에 따라 코드 블록을 실행할 때 사용
+  - AND : 두 조건 모두 참일 때
+  - OR : 둘 중 하나만 참일 때
+  - NOT : 조건의 부정
+  - IS INITIAL / IS NOT INITIAL : 변수 초기값 체크
 ```abap
 IF <조건>.
     <실행문>.
