Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -189,28 +189,40 @@ gv_len = STRLEN( gv_text ).     " 결과: 4
 
 #### 7) IF문
 - 조건에 따라 코드 블록을 실행할 때 사용
+  
   - AND : 두 조건 모두 참일 때
   - OR : 둘 중 하나만 참일 때
   - NOT : 조건의 부정
   - IS INITIAL / IS NOT INITIAL : 변수 초기값 체크
 ```abap
-IF <조건>.
-    <실행문>.
-ELSEIF <조건>.
-    <실행문>.
+IF <조건1> AND <조건2>.
+    " 두 조건 모두 참일 때 실행
+ELSEIF <조건1> OR <조건3>.
+    " 조건1 또는 조건3 중 하나라도 참이면 실행
+ELSEIF NOT gv_flag.
+    " gv_flag가 FALSE일 때 실행
+ELSEIF gv_var IS NOT INITIAL.
+    " gv_var가 초기값이 아닐 때 실행
 ELSE.
-    <실행문>.
+    " 위 조건이 모두 아니면 실행
 ENDIF.
 ```
 ```abap
-DATA gv_num TYPE i VALUE 10.
+DATA gv_num1 TYPE i VALUE 10.
+DATA gv_num2 TYPE i VALUE 0.
+DATA gv_flag TYPE abap_bool VALUE abap_false.
+DATA gv_text TYPE string.
 
-IF gv_num > 10.
-    WRITE '크다'.
-ELSEIF gv_num = 10.
-    WRITE '같다'.
+IF gv_num1 > 5 AND gv_num2 = 0.
+    WRITE '조건 1과 2 모두 만족'.
+ELSEIF gv_num1 = 5 OR gv_num2 = 1.
+    WRITE '조건 1 또는 2 만족'.
+ELSEIF NOT gv_flag.
+    WRITE 'gv_flag가 FALSE'.
+ELSEIF gv_text IS NOT INITIAL.
+    WRITE 'gv_text 값 있음'.
 ELSE.
-    WRITE '작다'.
+    WRITE '모든 조건 불만족'.
 ENDIF.
 ```
 </br>
