Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -349,3 +349,55 @@ gv_result = pa_num1 MOD pa_num2.  " 5 MOD 2 = 1
 WRITE:/ gv_result.
 *Pretty printer(코드정리) 사용시 Shift + F1
 ```
+</br>
+
+- 실습 4
+``abap
+PARAMETERS pa_age TYPE I.
+
+IF pa_age IS INITIAL.
+    MESSAGE '나이를 입력해주세요' TYPE 'E'.
+
+ELSEIF pa_age GE 8 AND pa_age LE 13.
+    WRITE '초등학생입니다.'.
+
+ELSEIF pa_age GT 13 AND pa_age LE 16.
+    WRITE '중학생입니다.'.
+
+ELSEIF pa_age GT 16 AND pa_age LT 20.
+    WRITE '고등학생입니다.'.
+
+ELSE.
+    WRITE '성인입니다.'.
+ENDIF.
+```
+</br>
+
+- 실습 5
+```abap
+PARAMETERS pa_curr TYPE C LENGTH 3.
+
+CASE pa_curr.
+  WHEN 'USD'.
+    WRITE: '달러를 선택하였습니다.'.
+  WHEN 'EUR'.
+    WRITE: '유로를 선택하였습니다.'.
+  WHEN 'KRW'.
+    WRITE: '한화를 선택하였습니다.'.
+  WHEN OTHERS.
+    MESSAGE 'USD, EUR, KRW 중 하나를 입력하세요' TYPE 'E'.
+ENDCASE.
+```
+</br>
+
+- 실습 6
+```abap
+PARAMETERS: pa_check AS CHECKBOX.
+
+CASE 'X'.
+  WHEN pa_check.  " 체크박스에 체크 됐을 때
+    WRITE: '체크되었습니다'.
+  WHEN OTHERS.    " 체크박스에 체크가 안됐을 때
+    WRITE: '체크되지 않았습니다.'.
+ENDCASE.
+```
