Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -402,3 +402,24 @@ CASE 'X'.
     WRITE: '체크되지 않았습니다.'.
 ENDCASE.
 ```
+</br>
+
+- 실습 7
+```abap
+PARAMETERS score TYPE I.
+PARAMETERS pa_check AS CHECKBOX.
+
+IF score LE 100 AND score GE 80.
+  IF pa_check EQ 'X'.
+    WRITE '성적 : A 우수상'.
+  else.
+    WRITE '성적 : A'.
+  ENDIF.
+ELSEIF score LT 80 AND score GE 60.
+  WRITE '성적 : B'.
+ELSEIF score LT 60 AND score GE 40.
+  WRITE '성적 : C'.
+ELSE.
+  WRITE '성적 : F'.
+ENDIF.
+```
