--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -423,3 +423,21 @@ ELSE.
   WRITE '성적 : F'.
 ENDIF.
 ```
+```abap
+PARAMETERS score TYPE I.
+PARAMETERS pa_check AS CHECKBOX.
+
+IF score <= 100 AND score >= 80.
+  IF pa_check EQ 'X'.
+    WRITE '성적 : A 우수상'.
+  else.
+    WRITE '성적 : A'.
+  ENDIF.
+ELSEIF score < 80 AND score >= 60.
+  WRITE '성적 : B'.
+ELSEIF score < 60 AND score >= 40.
+  WRITE '성적 : C'.
+ELSE.
+  WRITE '성적 : F'.
+ENDIF.
+```
