--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -189,6 +189,7 @@ gv_len = STRLEN( gv_text ).     " 결과: 4
 
 #### 7) IF문
 - 조건에 따라 코드 블록을 실행할 때 사용
+- 괄호 양 옆에 띄어쓰기 필수수
   
   - EQ (=), NE (≠), GT (>), LT (<), GE (≥), LE (≤)
   - AND : 두 조건 모두 참일 때
@@ -409,15 +410,15 @@ ENDCASE.
 PARAMETERS score TYPE I.
 PARAMETERS pa_check AS CHECKBOX.
 
-IF score LE 100 AND score GE 80.
-  IF pa_check EQ 'X'.
+IF ( score LE 100 AND score GE 80 ).
+  IF ( pa_check EQ 'X' ).
     WRITE '성적 : A 우수상'.
   else.
     WRITE '성적 : A'.
   ENDIF.
-ELSEIF score LT 80 AND score GE 60.
+ELSEIF ( score LT 80 AND score GE 60 ).
   WRITE '성적 : B'.
-ELSEIF score LT 60 AND score GE 40.
+ELSEIF ( score LT 60 AND score GE 40 ).
   WRITE '성적 : C'.
 ELSE.
   WRITE '성적 : F'.
@@ -427,15 +428,15 @@ ENDIF.
 PARAMETERS score TYPE I.
 PARAMETERS pa_check AS CHECKBOX.
 
-IF score <= 100 AND score >= 80.
+IF ( score <= 100 AND score >= 80 ).
   IF pa_check EQ 'X'.
     WRITE '성적 : A 우수상'.
   else.
     WRITE '성적 : A'.
   ENDIF.
-ELSEIF score < 80 AND score >= 60.
+ELSEIF ( score < 80 AND score >= 60 ).
   WRITE '성적 : B'.
-ELSEIF score < 60 AND score >= 40.
+ELSEIF ( score < 60 AND score >= 40 ).
   WRITE '성적 : C'.
 ELSE.
   WRITE '성적 : F'.
