--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -191,7 +191,8 @@ gv_len = STRLEN( gv_text ).     " 결과: 4
 - 조건에 따라 코드 블록을 실행할 때 사용
 - 괄호 양 옆에 띄어쓰기 필수수
   
-  - EQ (=), NE (≠), GT (>), LT (<), GE (≥), LE (≤)
+  - 비교연산자 : EQ (=), NE (≠), GT (>), LT (<), GE (≥), LE (≤),
+                 = (같다), <> (같지 않다), > (크다), < (작다), >= (크거나 같다), <= (작거나 같다)
   - AND : 두 조건 모두 참일 때
   - OR : 둘 중 하나만 참일 때
   - NOT : 조건의 부정
