Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -191,12 +191,9 @@ gv_len = STRLEN( gv_text ).     " 결과: 4
 - 조건에 따라 코드 블록을 실행할 때 사용
 - 괄호 양 옆에 띄어쓰기 필수수
   
-  - 비교연산자 : EQ (=), NE (≠), GT (>), LT (<), GE (≥), LE (≤),
-                 = (같다), <> (같지 않다), > (크다), < (작다), >= (크거나 같다), <= (작거나 같다)
-  - AND : 두 조건 모두 참일 때
-  - OR : 둘 중 하나만 참일 때
-  - NOT : 조건의 부정
-  - IS INITIAL / IS NOT INITIAL : 변수 초기값 체크
+  - 비교 연산자 : EQ (=), NE (≠), GT (>), LT (<), GE (≥), LE (≤), = (같다), <> (같지 않다), > (크다), < (작다), >= (크거나 같다), <= (작거나 같다)
+  - 논리 연산자 : AND (그리고), OR (또는), NOT (부정)
+  - 초기값 확인 : IS INITIAL (초기값인지 확인), IS NOT INITIAL (초기값이 아닌지 확인)
 ```abap
 IF <조건1> AND <조건2>.
     " 두 조건 모두 참일 때 실행
