Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -189,7 +189,7 @@ gv_len = STRLEN( gv_text ).     " 결과: 4
 
 #### 7) IF문
 - 조건에 따라 코드 블록을 실행할 때 사용
-- 괄호 양 옆에 띄어쓰기 필수수
+- 괄호 양 옆에 띄어쓰기 필수
   
   - 비교 연산자 : EQ (=), NE (≠), GT (>), LT (<), GE (≥), LE (≤), = (같다), <> (같지 않다), > (크다), < (작다), >= (크거나 같다), <= (작거나 같다)
   - 논리 연산자 : AND (그리고), OR (또는), NOT (부정)
