Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -145,6 +145,12 @@ WRITE: 'My selected variable : '(GRE),
        gc_num,
        text-001.
 ```
+- WRITE 구문에서 필드 길이 지정
+- (n) : 출력 시 지정한 길이만큼 공간 확보
+```abap
+WRITE: (10) gv_data,   " gv_data 값을 10자리 폭으로 출력
+       (8)  gv_data2.  " gv_data2 값을 8자리 폭으로 출력
+```
 </br>
 
 #### 4) MOVE
