Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -258,6 +258,17 @@ CASE gv_code.
 ENDCASE.
 ```
 </br>
+
+#### 9) MESSAGE
+- 프로그램 실행 중 사용자에게 알림, 경고, 오류 등을 출력
+```abap
+MESSAGE '<메시지 내용>' TYPE '<메시지 타입>'.
+```
+```abap
+MESSAGE '나이를 입력해주세요' TYPE 'E'.  " 오류 메시지
+```
+
+</br>
 </br>
 
 ### 연산자(Operators)
