Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -271,7 +271,7 @@ MESSAGE '나이를 입력해주세요' TYPE 'E'.  " 오류 메시지
 </br>
 </br>
 
-### 연산자(Operators)
+## < 연산자(Operators) >
 - ABAP에서 사용되는 기본 산술 연산자
 ```abap
 +   : 더하기
