Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -296,6 +296,29 @@ r = a DIV b.    " 3   (몫)
 r = a MOD b.    " 1   (나머지)
 ```
 </br>
+
+### 내장함수
+- `abs()` : 숫자의 절대값을 반환
+- `strlen()` : 문자열 길이를 반환
+- `sqrt()` : 숫자의 제곱근을 반환
+- `ipow()` : 정수 거듭제곱 계산 (base^exp)
+```abap
+DATA: gv_num TYPE I,
+      gv_len TYPE string,
+      gv_sqrt TYPE I,
+      gv_ipow TYPE I.
+
+gv_num = abs( -20 ).
+gv_len = strlen( 'Hello World' ).
+gv_sqrt = sqrt( abs( 9 ) ).
+gv_ipow = ipow( base = 5 exp = 3 ).
+
+write:/ '절대값 abs : ', gv_num,     " 20
+      / '문자열길이 len : ', gv_len,  " 11
+      / '제곱근 sqrt : ', gv_sqrt,   " 3
+      / '지수 ipow : ', gv_ipow.    " 125
+```
+</br>
 </br>
 
 ---
