Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -483,3 +483,35 @@ ELSE.
   WRITE '성적 : F'.
 ENDIF.
 ```
+</br>
+
+- 실습 8
+```abap
+IF ( pa_score <= 100 AND pa_score >= 80 ).
+  IF pa_check EQ 'X'.
+    WRITE '성적 : A 우수상'.
+  else.
+    WRITE '성적 : A'.
+  ENDIF.
+ELSEIF ( pa_score < 80 AND pa_score >= 60 ).
+  WRITE '성적 : B'.
+ELSEIF ( pa_score < 60 AND pa_score >= 40 ).
+  WRITE '성적 : C'.
+ELSE.
+  WRITE '성적 : F'.
+ENDIF.
+
+IF ( pa_age >= 20 ).
+  IF ( pa_rad1 = 'X' ).
+    WRITE '성인 남성'.
+  else.
+    WRITE '성인 여성'.
+  ENDIF.
+else.
+    IF ( pa_rad1 = 'X' ).
+      WRITE '남성'.
+    else.
+      WRITE '여성'.
+  ENDIF.
+ENDIF.
+```
