Update 프로그래핑 문법과 로직 (11.17).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.17).md
@@ -319,6 +319,30 @@ write:/ '절대값 abs : ', gv_num,     " 20
       / '지수 ipow : ', gv_ipow.    " 125
 ```
 </br>
+
+### 문자열 처리 함수
+- `&&` : 두 문자열을 간단히 이어 붙일 때 사용.
+- `CA` : 왼쪽 문자열에 오른쪽 문자열의 문자 중 하나라도 포함되어 있으면 TRUE. 대소문자 구분함.
+- `CONCATENATE` : 여러 문자열을 순서대로 연결. `SEPARATED BY`로 각 문자열 사이에 넣을 구분자 지정 가능.
+```abap
+DATA lv_result TYPE string.
+lv_result = 'Hello' && ' World'.    " 결과: 'Hello World'
+
+DATA lv_str TYPE string.
+lv_str = 'ABC123'.
+IF lv_str CA '123'.
+  WRITE: / '숫자를 포함함'.
+ENDIF.
+
+DATA: lv_text1 TYPE string VALUE '여기는 서울',
+      lv_text2 TYPE string VALUE '날씨가 맑습니다',
+      result   TYPE string.
+CONCATENATE lv_text1 '이고' lv_text2 '입니다'
+INTO result SEPARATED BY space.
+WRITE: / result.
+" 결과: '여기는 서울 이고 날씨가 맑습니다 입니다'
+```
+</br>
 </br>
 
 ---
