Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -1,2 +1,96 @@
 # 반복문
-### DO … ENDDO
+### 1) DO … ENDDO
+- 반복 횟수를 지정하지 않으면 무한 반복
+- `EXIT`나 `CHECK` 등으로 빠져나와야 함
+```abap
+DO.
+  " 반복 코드
+ENDDO.
+```
+```abap
+DATA lv_cnt TYPE i VALUE 0.
+
+DO.
+  lv_cnt = lv_cnt + 1.
+  IF lv_cnt > 3.
+    EXIT.
+  ENDIF.
+ENDDO.
+```
+</br>
+
+### 2) DO n TIMES … ENDDO
+- 지정한 n번 반복
+- 반복 횟수는 sy-index에 자동 저장됨(1부터 시작)
+```abap
+DO n TIMES.
+  " 반복 코드
+ENDDO.
+```
+```abap
+DO 5 TIMES.
+  WRITE: / '횟수:', sy-index.
+ENDDO.
+```
+</br>
+
+### 3) WHILE … ENDWHILE
+- 조건이 TRUE일 동안 반복
+- 조건이 FALSE가 되면 종료
+```abap
+WHILE 조건.
+  " 반복 코드
+ENDWHILE.
+```
+```abap
+DATA lv_i TYPE i VALUE 1.
+
+WHILE lv_i <= 5.
+  WRITE: / lv_i.
+  lv_i = lv_i + 1.
+ENDWHILE.
+```
+</br>
+
+### 4) SELECT … ENDSELECT
+- DB를 row-by-row 방식으로 조회
+- SELECT된 각 레코드를 반복 처리
+```abap
+SELECT fields
+  FROM table
+  INTO workarea.
+
+  " 처리 로직
+
+ENDSELECT.
+```
+```abap
+DATA wa TYPE sflight.
+
+SELECT * FROM sflight
+  INTO wa.
+
+  WRITE: / wa-carrid, wa-connid.
+
+ENDSELECT.
+```
+</br>
+
+### 5) LOOP AT … ENDLOOP
+- 내부 테이블을 한 행씩 반복 처리
+- 현재 행 번호는 sy-tabix
+```abap
+LOOP AT itab INTO wa.
+  " 처리 로직
+ENDLOOP.
+```
+```abap
+DATA: lt_data TYPE TABLE OF sflight,
+      wa_data TYPE sflight.
+
+SELECT * FROM sflight INTO TABLE lt_data.
+
+LOOP AT lt_data INTO wa_data.
+  WRITE: / wa_data-carrid, wa_data-connid.
+ENDLOOP.
+```
