Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -94,3 +94,36 @@ LOOP AT lt_data INTO wa_data.
   WRITE: / wa_data-carrid, wa_data-connid.
 ENDLOOP.
 ```
+</br>
+
+# 📌 ABAP 시스템 변수(System Fields) — 반복문 중심 정리
+
+ABAP 반복문에서 주로 사용되는 시스템 변수를 중심으로 정리했습니다.
+
+---
+
+## 1️⃣ 시스템 변수 표
+
+| 시스템 변수 | 주요 용도 | 반복문과의 관계(중요) | 예시 |
+|-------------|----------|------------------------|-------|
+| **sy-mandt** | SAP 클라이언트 번호 | 반복문과 무관 | `100`, `200` |
+| **sy-uname** | 로그인 사용자 ID | 반복문과 무관 | `USER01` |
+| **sy-langu** | 언어 코드 | 반복문과 무관 | `EN`, `KO` |
+| **sy-datum** | 시스템 날짜 | 반복문과 무관 | `20251118` |
+| **sy-uzeit** | 시스템 시간 | 반복문과 무관 | `152355` |
+| **sy-tcode** | 현재 트랜잭션 코드 | 반복문과 무관 | `SE38`, `SE11` |
+| **sy-repid** | 실행 중 프로그램 이름 | 반복문과 무관 | `ZTEST` |
+| **⭐ sy-subrc** | ABAP 문법 실행 결과 코드 | 반복문 자체보다는 조건문/SELECT 후 결과판별에서 중요 | `0=성공`, `4=데이터없음`, `8=키오류` |
+| **⭐⭐ sy-dbcnt** | SELECT-ENDSELECT 문에서 읽은 행 수 | **SELECT 루프 인덱싱** — SELECT가 몇 번째 행인지 | 1, 2, 3 … |
+| **⭐⭐ sy-tabix** | 내부 테이블 LOOP 행 번호 | **LOOP AT 인덱싱** — 내부 테이블의 현재 읽는 행 번호 | 1, 2, 3 … |
+| **⭐⭐ sy-index** | DO / WHILE 반복 인덱스 | **일반 반복문 인덱싱** — DO, DO n TIMES, WHILE 반복 횟수 | 1, 2, 3 … |
+
+---
+
+## 2️⃣ 반복문별 사용 요약
+
+| 반복문 종류 | 사용되는 시스템 변수 | 의미 |
+|-------------|----------------------|-------|
+| **SELECT … ENDSELECT** | **sy-dbcnt** | DB 레코드를 몇 개 읽었는지(1부터 증가) |
+| **LOOP AT internal table** | **sy-tabix** | 내부 테이블 현재 행 번호 |
+| **DO / WHILE** | **sy-index** | 반복문 반복 횟수(1부터 증가) |
