Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -96,7 +96,10 @@ ENDLOOP.
 ```
 </br>
 
-# 📌 ABAP 시스템 변수(System Fields) — 반복문 중심 정리
+---
+</br>
+
+# ABAP 시스템 변수(System Fields)
 
 ABAP 반복문에서 주로 사용되는 시스템 변수를 중심으로 정리했습니다.
 
