Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -101,11 +101,7 @@ ENDLOOP.
 
 # ABAP 시스템 변수(System Fields)
 
-ABAP 반복문에서 주로 사용되는 시스템 변수를 중심으로 정리했습니다.
-
----
-
-## 1️⃣ 시스템 변수 표
+### 시스템 변수 표
 
 | 시스템 변수 | 주요 용도 | 반복문과의 관계(중요) | 예시 |
 |-------------|----------|------------------------|-------|
