Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -55,22 +55,31 @@ ENDWHILE.
 ### 4) SELECT … ENDSELECT
 - DB를 row-by-row 방식으로 조회
 - SELECT된 각 레코드를 반복 처리
+- <필드목록> : 가져올 컬럼 이름 (예: carrid, connid)
+- <테이블명> : DB 테이블 이름 (예: sflight)
+- <워크에어리어 변수> : 데이터를 담을 ABAP 변수/구조
+- WHERE : 선택 조건 (선택 사항)
+- ORDER BY : 정렬 조건 (선택 사항)
 ```abap
-SELECT fields
-  FROM table
-  INTO workarea.
-
-  " 처리 로직
-
+SELECT <필드목록>
+  FROM <테이블명>
+  INTO <워크에어리어 변수>
+  [WHERE <조건문>]
+  [ORDER BY <정렬필드>].
+  
+  " 처리 로직 작성 (레코드 하나씩 처리)
+  
 ENDSELECT.
 ```
 ```abap
-DATA wa TYPE sflight.
+DATA: wa_sflight TYPE sflight.  " 작업 영역 선언
 
-SELECT * FROM sflight
-  INTO wa.
+" sflight 테이블 전체 레코드를 하나씩 읽어서 처리
+SELECT * 
+  FROM sflight
+  INTO wa_sflight.
 
-  WRITE: / wa-carrid, wa-connid.
+  WRITE: / wa_sflight-carrid, wa_sflight-connid, wa_sflight-fldate.
 
 ENDSELECT.
 ```
@@ -80,8 +89,10 @@ ENDSELECT.
 - 내부 테이블을 한 행씩 반복 처리
 - 현재 행 번호는 sy-tabix
 ```abap
-LOOP AT itab INTO wa.
-  " 처리 로직
+LOOP AT <internal_table> INTO <work_area> [FROM <시작행>] [TO <끝행>] [WHERE <조건>].
+
+  " 반복 처리 로직 작성 (각 행마다 실행)
+
 ENDLOOP.
 ```
 ```abap
