Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -1,4 +1,16 @@
 # 반복문
+
+## 📌 ABAP 반복문 관련 시스템 변수
+
+| 시스템 변수 | 기능 / 의미 | 반복문과의 관계 |
+|-------------|------------|----------------|
+| **sy-subrc** | ABAP 문법 실행 결과 코드 <br> - 0: 성공 / 데이터 존재 <br> - 4: 조건에 맞는 데이터 없음 <br> - 8: 키 조합 오류 | SELECT, 함수, 조건문 실행 후 결과 확인 |
+| **sy-dbcnt** | SELECT … ENDSELECT 루프 인덱스 (몇 번째 DB 레코드를 읽었는지) | SELECT 루프에서 자동 증가 |
+| **sy-tabix** | 내부 테이블 LOOP 행 번호 | LOOP AT 내부 테이블 반복 시 현재 행 번호 |
+| **sy-index** | DO / WHILE 반복문 인덱스 | 일반 반복문(DO, DO n TIMES, WHILE)에서 반복 횟수 |
+</br>
+
+
 ### 1) DO … ENDDO
 - 반복 횟수를 지정하지 않으면 무한 반복
 - `EXIT`나 `CHECK` 등으로 빠져나와야 함
@@ -88,6 +100,8 @@ ENDSELECT.
 ### 5) LOOP AT … ENDLOOP
 - 내부 테이블을 한 행씩 반복 처리
 - 현재 행 번호는 sy-tabix
+- `TABLE OF` : 특정 구조나 타입을 가지는 내부 테이블을 선언할 때 사용
+- `LINE OF` : 내부 테이블에서 한 행(row)의 타입을 가져올 때 사용
 ```abap
 LOOP AT <internal_table> INTO <work_area> [FROM <시작행>] [TO <끝행>] [WHERE <조건>].
 
@@ -106,12 +120,3 @@ LOOP AT lt_data INTO wa_data.
 ENDLOOP.
 ```
 </br>
-
-## 📌 ABAP 반복문 관련 시스템 변수
-
-| 시스템 변수 | 기능 / 의미 | 반복문과의 관계 |
-|-------------|------------|----------------|
-| **sy-subrc** | ABAP 문법 실행 결과 코드 <br> - 0: 성공 / 데이터 존재 <br> - 4: 조건에 맞는 데이터 없음 <br> - 8: 키 조합 오류 | SELECT, 함수, 조건문 실행 후 결과 확인 |
-| **sy-dbcnt** | SELECT … ENDSELECT 루프 인덱스 (몇 번째 DB 레코드를 읽었는지) | SELECT 루프에서 자동 증가 |
-| **sy-tabix** | 내부 테이블 LOOP 행 번호 | LOOP AT 내부 테이블 반복 시 현재 행 번호 |
-| **sy-index** | DO / WHILE 반복문 인덱스 | 일반 반복문(DO, DO n TIMES, WHILE)에서 반복 횟수 |
