Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -29,6 +29,16 @@ DO.
   ENDIF.
 ENDDO.
 ```
+```abap
+PARAMETERS: pa_cnt TYPE i.
+
+DO.
+  IF SY-INDEX > pa_cnt.
+    EXIT.
+  ENDIF.
+  WRITE:/ sy-index.
+ENDDO.
+```
 </br>
 
 ### 2) DO n TIMES … ENDDO
