Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -14,19 +14,10 @@
 ### 1) DO … ENDDO
 - 반복 횟수를 지정하지 않으면 무한 반복
 - `EXIT`나 `CHECK` 등으로 빠져나와야 함
+- sy-index 사용 가능
 ```abap
 DO.
   " 반복 코드
-ENDDO.
-```
-```abap
-DATA lv_cnt TYPE i VALUE 0.
-
-DO.
-  lv_cnt = lv_cnt + 1.
-  IF lv_cnt > 3.
-    EXIT.
-  ENDIF.
 ENDDO.
 ```
 ```abap
@@ -37,6 +28,16 @@ DO.
     EXIT.
   ENDIF.
   WRITE:/ sy-index.
+ENDDO.
+```
+```abap
+DATA lv_cnt TYPE i VALUE 0.
+
+DO.
+  lv_cnt = lv_cnt + 1.
+  IF lv_cnt > 3.
+    EXIT.
+  ENDIF.
 ENDDO.
 ```
 </br>
