--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -14,7 +14,7 @@
 ### 1) DO … ENDDO
 - 반복 횟수를 지정하지 않으면 무한 반복
 - `EXIT`나 `CHECK` 등으로 빠져나와야 함
-- sy-index 사용 가능
+- `sy-index` 사용 가능
 ```abap
 DO.
   " 반복 코드
@@ -45,9 +45,17 @@ ENDDO.
 ### 2) DO n TIMES … ENDDO
 - 지정한 n번 반복
 - 반복 횟수는 sy-index에 자동 저장됨(1부터 시작)
+- `sy-index` 사용 가능
 ```abap
 DO n TIMES.
   " 반복 코드
+ENDDO.
+```
+```abap
+PARAMETERS: pa_cnt TYPE i.
+
+DO pa_cnt TIMES.
+  WRITE:/ sy-index.
 ENDDO.
 ```
 ```abap
@@ -60,9 +68,17 @@ ENDDO.
 ### 3) WHILE … ENDWHILE
 - 조건이 TRUE일 동안 반복
 - 조건이 FALSE가 되면 종료
+- `sy-index` 사용 가능
 ```abap
 WHILE 조건.
   " 반복 코드
+ENDWHILE.
+```
+```abap
+PARAMETERS: pa_cnt TYPE i.
+
+WHILE sy-index < pa_cnt.
+  WRITE:/ sy-index.
 ENDWHILE.
 ```
 ```abap
@@ -78,6 +94,7 @@ ENDWHILE.
 ### 4) SELECT … ENDSELECT
 - DB를 row-by-row 방식으로 조회
 - SELECT된 각 레코드를 반복 처리
+- `sy-dbcnt` 사용 가능
 - <필드목록> : 가져올 컬럼 이름 (예: carrid, connid)
 - <테이블명> : DB 테이블 이름 (예: sflight)
 - <워크에어리어 변수> : 데이터를 담을 ABAP 변수/구조
@@ -92,6 +109,19 @@ SELECT <필드목록>
   
   " 처리 로직 작성 (레코드 하나씩 처리)
   
+ENDSELECT.
+```
+```abap
+DATA: gv_carrid TYPE scarr-carrid. " S_CARR_ID랑 동일
+
+" 만약 조건이 없으면 테이블의 전체 건수 만큼 루프문 실행
+" 조건이 있으면 조건에 맞는 데이터를 가져옴
+SELECT carrid
+  INTO gv_carrid
+  FROM scarr.
+  WHERE carrid='AA'.
+    " 여기서 데이터 처리 로직 구현
+    WRITE:/ sy-dbcnt, gv_carrid.
 ENDSELECT.
 ```
 ```abap
@@ -111,6 +141,7 @@ ENDSELECT.
 ### 5) LOOP AT … ENDLOOP
 - 내부 테이블을 한 행씩 반복 처리
 - 현재 행 번호는 sy-tabix
+- `sy-tabix` 사용 가능
 - `TABLE OF` : 특정 구조나 타입을 가지는 내부 테이블을 선언할 때 사용
 - `LINE OF` : 내부 테이블에서 한 행(row)의 타입을 가져올 때 사용
 ```abap
@@ -119,6 +150,27 @@ LOOP AT <internal_table> INTO <work_area> [FROM <시작행>] [TO <끝행>] [WHER
   " 반복 처리 로직 작성 (각 행마다 실행)
 
 ENDLOOP.
+```
+```abap
+DATA: gs_sflight TYPE BC400_S_FLIGHT,      " Structure
+      gt_sflight LIKE TABLE OF gs_sflight. " gt : 글로벌 테이블
+" DATA: gs_sflight2 LIKE LINE OF gt_sflight. " Structure
+
+SELECT * FROM SFLIGHT
+  INTO CORRESPONDING FIELDS OF TABLE @gt_sflight  " DB 테이블에서 데이터 가져와서 internal 테이블에 넣음
+  WHERE CARRID = 'AA'
+    AND CONNID = '0017'.
+
+IF sy-subrc = 0. " 만약 데이터 조회 성공한다면 (데이터 존재시)
+  " Internal Table에 조회한 데이터들이 들어와 있는 상황
+  " gt_flight를 한 건씩 돌면서 처리. 이 때 gs_flight 에 담아서 처리
+  LOOP AT gt_sflight INTO gs_sflight. " Work-area라고 부름
+    WRITE:/ sy-tabix,
+            gs_sflight-carrid,
+            gs_sflight-connid,
+            gs_sflight-fldate.
+  ENDLOOP.
+ENDIF.
 ```
 ```abap
 DATA: lt_data TYPE TABLE OF sflight,
