Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -95,17 +95,12 @@ ENDWHILE.
 - DB를 row-by-row 방식으로 조회
 - SELECT된 각 레코드를 반복 처리
 - `sy-dbcnt` 사용 가능
-- <필드목록> : 가져올 컬럼 이름 (예: carrid, connid)
-- <테이블명> : DB 테이블 이름 (예: sflight)
-- <워크에어리어 변수> : 데이터를 담을 ABAP 변수/구조
-- WHERE : 선택 조건 (선택 사항)
-- ORDER BY : 정렬 조건 (선택 사항)
 ```abap
-SELECT <필드목록>
-  FROM <테이블명>
-  INTO <워크에어리어 변수>
-  [WHERE <조건문>]
-  [ORDER BY <정렬필드>].
+SELECT <필드목록>                  " <필드목록> : 가져올 컬럼 이름 (예: carrid, connid)
+  FROM <테이블명>                  " <테이블명> : DB 테이블 이름 (예: sflight)
+  INTO <워크에어리어 변수>          " <워크에어리어 변수> : 데이터를 담을 ABAP 변수/구조
+  [WHERE <조건문>]                 " WHERE : 선택 조건 (선택 사항)
+  [ORDER BY <정렬필드>].            " ORDER BY : 정렬 조건 (선택 사항)
   
   " 처리 로직 작성 (레코드 하나씩 처리)
   
