Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -108,12 +108,13 @@ ENDSELECT.
 ```
 ```abap
 DATA: gv_carrid TYPE scarr-carrid. " S_CARR_ID랑 동일
+" Transparent Table 이라 세부적으로 들어갈 수 있음
 
 " 만약 조건이 없으면 테이블의 전체 건수 만큼 루프문 실행
 " 조건이 있으면 조건에 맞는 데이터를 가져옴
 SELECT carrid
   INTO gv_carrid
-  FROM scarr.
+  FROM scarr
   WHERE carrid='AA'.
     " 여기서 데이터 처리 로직 구현
     WRITE:/ sy-dbcnt, gv_carrid.
@@ -160,6 +161,7 @@ IF sy-subrc = 0. " 만약 데이터 조회 성공한다면 (데이터 존재시)
   " Internal Table에 조회한 데이터들이 들어와 있는 상황
   " gt_flight를 한 건씩 돌면서 처리. 이 때 gs_flight 에 담아서 처리
   LOOP AT gt_sflight INTO gs_sflight. " Work-area라고 부름
+    " gt_sflight 와 gs_sflights 는 필드 구조가 동일해야함.
     WRITE:/ sy-tabix,
             gs_sflight-carrid,
             gs_sflight-connid,
