Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -180,3 +180,42 @@ LOOP AT lt_data INTO wa_data.
 ENDLOOP.
 ```
 </br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+- 실습 1
+```abap
+PARAMETERS: pa_num1 TYPE I,
+            pa_num2 TYPE I.
+DATA gv_num TYPE I.
+
+IF ( pa_num1 > pa_num2 ).
+  gv_num = pa_num2 + 1.
+
+  DO.
+    IF ( sy-index > pa_num1 - pa_num2 - 1 ).
+      EXIT.
+    ENDIF.
+    IF ( gv_num MOD 2 = 1 ).
+      WRITE / gv_num.
+    ENDIF.
+    gv_num = gv_num + 1.
+  ENDDO.
+ELSE.
+  gv_num = pa_num1 + 1.
+
+  DO.
+    IF ( sy-index > pa_num2 - pa_num1 - 1 ).
+      EXIT.
+    ENDIF.
+    IF ( gv_num MOD 2 = 1 ).
+      WRITE / gv_num.
+    ENDIF.
+    gv_num = gv_num + 1.
+  ENDDO.
+ENDIF.
+```
