Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -190,33 +190,29 @@ ENDLOOP.
 - 실습 1
 - 숫자 2개 사이 값의 홀수 출력
 ```abap
-PARAMETERS: pa_num1 TYPE I,
+PARAMETERS: pa_num1 TYPE I,   " 입력받은 두 숫자
             pa_num2 TYPE I.
-DATA gv_num TYPE I.
+DATA: gv_num TYPE I,
+      gv_num1 LIKE gv_num,
+      gv_num2 LIKE gv_num.           " 출력할 숫자 검사를 시작할 변수 선언
 
-IF ( pa_num1 > pa_num2 ).
+IF ( pa_num1 > pa_num2 ).     " 앞에 숫자 값이 더 클 때
   gv_num = pa_num2 + 1.
-
-  DO.
-    IF ( sy-index > pa_num1 - pa_num2 - 1 ).
-      EXIT.
-    ENDIF.
-    IF ( gv_num MOD 2 = 1 ).
-      WRITE / gv_num.
-    ENDIF.
-    gv_num = gv_num + 1.
-  ENDDO.
+  gv_num1 = pa_num1.
+  gv_num2 = pa_num2.
 ELSE.
   gv_num = pa_num1 + 1.
-
-  DO.
-    IF ( sy-index > pa_num2 - pa_num1 - 1 ).
-      EXIT.
-    ENDIF.
-    IF ( gv_num MOD 2 = 1 ).
-      WRITE / gv_num.
-    ENDIF.
-    gv_num = gv_num + 1.
-  ENDDO.
+  gv_num1 = pa_num2.
+  gv_num2 = pa_num1.
 ENDIF.
+
+DO.
+  IF ( sy-index > gv_num1 - gv_num2 - 1 ).
+    EXIT.
+  ENDIF.
+  IF ( gv_num MOD 2 = 1 ).
+    WRITE / gv_num.
+  ENDIF.
+  gv_num = gv_num + 1.
+ENDDO.
 ```
