Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -216,3 +216,29 @@ DO.
   gv_num = gv_num + 1.
 ENDDO.
 ```
+</br>
+
+- 실습 2
+- 두 숫자 사이 3의 배수 구하기
+```abap
+PARAMETERS: pa_small TYPE I, pa_big TYPE I.
+CONSTANTS: gc_const TYPE I VALUE 3.
+
+IF ( ( pa_small IS INITIAL ) OR ( pa_big IS INITIAL ) ).
+  MESSAGE 'INITIAL ERROR !!' TYPE 'E'.
+ENDIF.
+
+IF ( pa_big < pa_small ).
+  MESSAGE 'pa_big < pa_small ERROR !!' TYPE 'E'.
+ENDIF.
+
+DO.
+  IF ( pa_small > pa_big ).
+    EXIT.
+  ENDIF.
+  IF ( pa_small MOD gc_const = 0 ).
+    WRITE / pa_small.
+  ENDIF.
+  pa_small = pa_small + 1.
+ENDDO.
+```
