Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -225,11 +225,11 @@ PARAMETERS: pa_small TYPE I, pa_big TYPE I.
 CONSTANTS: gc_const TYPE I VALUE 3.
 
 IF ( ( pa_small IS INITIAL ) OR ( pa_big IS INITIAL ) ).
-  MESSAGE 'INITIAL ERROR !!' TYPE 'E'.
+  MESSAGE '초기값에러'(INI) TYPE 'E'.
 ENDIF.
 
 IF ( pa_big < pa_small ).
-  MESSAGE 'pa_big < pa_small ERROR !!' TYPE 'E'.
+  MESSAGE '사이즈에러'(siz) TYPE 'E'.
 ENDIF.
 
 DO.
